# hotdoc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  COPYING  HACKING.markdown  MANIFEST.in  README.md  base_formatter.py  bdt  bdt.py  clangizer.py  dbusizer.py  design.markdown  dev-requirements.txt  docmain.py  doctool.py  doctranslate.py  extensions.markdown  gnome_markdown_filter.py  gtk_doc_translator.py  html_formatter.py  html_renderer.py  links.py  loggable.py  markdown_formatter.py  markdown_renderer.py  meson.build  meson_options.txt  naive_index.py  newdoc.py  newdoclauncher.py  pandoc_client.py  pandoc_server.hs  porting.markdown  pre-commit  pyproject.toml  requirements.txt  sections.py  (+7 more)
hotdoc/: .gitignore  VERSION.txt  __init__.py  dbusizer.py  hotdoc  hotdoc.py.in  hotdoc_dep_printer  hotdoc_dep_printer.py  meson.build  run_hotdoc.py
hotdoc/clang_interface/: clangizer.py
hotdoc/core/: alchemy_integration.py  base_extension.py  base_formatter.py  base_page_parser.py  change_tracker.py  comment.py  comment_block.py  config.py  database.py  dependencies.py  doc_database.py  doc_repo.py  doc_tool.py  doc_tree.py  exceptions.py  extension.py  file_includer.py  filesystem.py  formatter.py  gi_raw_parser.py  gnome_markdown_filter.py  gtk_doc_parser.py  inc_parser.py  inclusions.py  links.py  meson.build  naive_index.py  project.py  sections.py  symbols.py  tree.py  wizard.py
hotdoc/core/assets/: API_index.js  c.css  js.css
hotdoc/core/pandoc_interface/: translator_module.c
hotdoc/core/templates/: action_prototype.html  alias.html  base_page.html  base_symbol.html  callable.html  callable_prototype.html  class.html  constant.html  enum.html  enum_member.html  field_detail.html  hd_utils.html  interface.html  link.html  member_list.html  multi_return_value.html  object_hierarchy.html  page.html  parameters.html  property.html  return_item.html  simple_symbol.html  struct.html  symbol_wrapper.html
hotdoc/core/tests/: test_config_parser.py  test_database.py  test_doc_database.py  test_doc_tree.py  test_extension.py  test_inclusions.py  test_links.py  test_page.py  test_project.py
hotdoc/extensions/: __init__.py  c_extension.py  common_mark_parser.py  dbus_extension.py  gi_extension.py  gi_html_formatter.py  gi_raw_parser.py  gtk_doc_parser.py  meson.build  multiple_choice_tag.py  python_doc_parser.py  python_extension.py
hotdoc/extensions/c/: c_extension.py  meson.build  utils.py
hotdoc/extensions/c/clang/: __init__.py  cindex.py  enumerations.py
hotdoc/extensions/check_since_markers/: check_since_markers.py  meson.build
hotdoc/extensions/comment_on_github/: comment_on_github_extension.py  meson.build
hotdoc/extensions/comment_on_github/scripts/: github-comment-loader.js
hotdoc/extensions/comment_on_github/templates/: github_comments.html
hotdoc/extensions/dbus/: dbus_extension.py  meson.build
hotdoc/extensions/devhelp/: devhelp.css  devhelp_extension.py  meson.build
hotdoc/extensions/edit_on_github/: edit_on_github_extension.py  meson.build
hotdoc/extensions/feedgen/: feedgen_extension.py  meson.build
hotdoc/extensions/gi/: annotation_parser.py  flags.py  formatter.py  fundamentals.py  gi_extension.py  gtkdoc_links.py  language.py  meson.build  node_cache.py  symbols.py  test_gi_extension.py  utils.py
hotdoc/extensions/gi/html_templates/: fundamental.html  gi_annotations.html  gi_flags.html  javascript_action_prototype.html  javascript_prototype.html  (+4 more)
hotdoc/extensions/git_upload/: git_upload_extension.py  meson.build
hotdoc/extensions/gst/: gst_extension.py  meson.build
hotdoc/extensions/license/: license_extension.py  meson.build
hotdoc/extensions/pagefind/: meson.build  pagefind_extension.py
hotdoc/extensions/search/: create_index.py  meson.build  search.js  search_extension.py  stopwords.txt  trie.js  trie.py
hotdoc/extensions/syntax_highlighting/: meson.build  prism_autoloader_path_override.js  syntax_extension.py
hotdoc/extensions/tags/: meson.build  tag_extension.py
hotdoc/extensions/templates/: gi_annotations.html  gi_index.html  gi_return_value.html  javascript_prototype.html  property.html  property_summary.html  python_compound.html  python_compound_summary.html  python_prototype.html
hotdoc/formatters/: html_formatter.py
hotdoc/formatters/html/: API_index.js  greenstyle.css  html_formatter.py  js.css  prism.css  python.css  redstyle.css
hotdoc/formatters/html_assets/: anchorizer.js  index.css
hotdoc/formatters/html_templates/: alias.html  base_page.html  base_symbol.html  base_symbol_summary.html  callable.html  class_summary.html  constant_summary.html  enum.html  field_detail.html  interface.html  page.html  parameter_detail.html  property.html  property_prototype.html  raw_code.html  return_item.html  simple_symbol.html  struct.html
hotdoc/formatters/markdown/: markdown_formatter.py
hotdoc/less/: light-variables.less  variables.less
hotdoc/lexer_parsers/c_comment_scanner/: scanner.l
hotdoc/lexer_parsers/doxygen_parser/: doxenizer.l  doxparser.c  doxparser.h
hotdoc/parsers/: Makefile  README.markdown  cmark_gtkdoc_extension.c  cmark_gtkdoc_extension.h  cmark_gtkdoc_scanner.c  cmark_gtkdoc_scanner.h  cmark_gtkdoc_scanner.re  cmark_include_extension.c  cmark_include_extension.h  cmark_include_scanner.c  cmark_include_scanner.h  cmark_include_scanner.re  cmark_module.c  cmark_module_utils.h  cmark_utils.py  gtk_doc.py  gtk_doc_parser.py  meson.build  search_module.c  sitemap.py  sitemap_parser.py  standalone_parser.py  trie.c  trie.h
hotdoc/parsers/c_comment_scanner/: meson.build  scanner.h  scanner.l  scannermodule.c
hotdoc/parsers/tests/: test_cmark_parser.py  test_standalone_parser.py
hotdoc/tests/: fixtures.py  meson.build  test_hotdoc.py
hotdoc/transition_scripts/: gtkdoc_to_gidoc.py  patcher.py  sgml_to_sections.py
hotdoc/utils/: alchemy.py  alchemy_integration.py  configurable.py  git_interface.py  hotdoc.m4  hotdoc.mk  loggable.py  patcher.py  setup_utils.py  signals.py  simple_signals.py  utils.py  wizard.py
hotdoc/utils/tests/: test_loggable.py
(+258 files in other folders)
