[build-system]
requires = [
    "meson >= 1.0.0",
    "meson-python >= 0.14.0",
]
build-backend = "mesonpy"

[project]
name = 'hotdoc'
version = '0.0.1'
description = 'A documentation tool micro-framework'
readme = 'README.md'
requires-python = '>=3.8'
license = 'LGPL-2.1-or-later'
authors = [
  {name = 'Mathieu Duponchelle', email = 'mathieu.duponchelle@opencreed.com'},
]


[project.scripts]
hotdoc = 'hotdoc.run_hotdoc:main'
hotdoc_dep_printer = 'hotdoc.hotdoc_dep_printer:main'

[project.entry-points."hotdoc.extensions"]
get_extension_classes = "hotdoc.extensions:get_extension_classes"

[project.entry-points."hotdoc.extensions.gi.languages"]
get_language_classes = "hotdoc.extensions.gi.languages:get_language_classes"