py.install_sources(
    '__init__.py',
    'comment.py',
    'config.py',
    'database.py',
    'exceptions.py',
    'extension.py',
    'formatter.py',
    'inclusions.py',
    'links.py',
    'project.py',
    'symbols.py',
    'tree.py',
    'assets/API_index.js',
    'assets/c.css',
    'assets/css.escape.js',
    'assets/home.png',
    'assets/index.css',
    'assets/js.css',
    'assets/python.css',
    'assets/style.css',
    'templates/action_prototype.html',
    'templates/alias.html',
    'templates/API_index.html',
    'templates/base_page.html',
    'templates/base_symbol.html',
    'templates/callable.html',
    'templates/callable_prototype.html',
    'templates/class.html',
    'templates/constant.html',
    'templates/enum.html',
    'templates/enum_member.html',
    'templates/field_detail.html',
    'templates/hierarchy.html',
    'templates/inline_code.html',
    'templates/interface.html',
    'templates/link.html',
    'templates/member_list.html',
    'templates/multi_return_value.html',
    'templates/navbar_center.html',
    'templates/page.html',
    'templates/parameter_detail.html',
    'templates/parameters.html',
    'templates/property.html',
    'templates/property_prototype.html',
    'templates/raw_code.html',
    'templates/return_item.html',
    'templates/simple_symbol.html',
    'templates/struct.html',
    'templates/symbol_wrapper.html',
    'tests/__init__.py',
    'tests/test_config_parser.py',
    'tests/test_database.py',
    'tests/test_doc_tree.py',
    'tests/test_inclusions.py',
    'tests/test_links.py',
    'tests/test_page.py',
    'tests/test_project.py',
    subdir: 'hotdoc/core',
    preserve_path: true,
)
