py.install_sources(
    '__init__.py',
    'annotation_parser.py',
    'flags.py',
    'formatter.py',
    'gi_extension.py',
    'language.py',
    'node_cache.py',
    'symbols.py',
    'test_gi_extension.py',
    'utils.py',
    'html_templates/__init__.py',
    'html_templates/gi_annotations.html',
    'html_templates/gi_flags.html',
    'html_templates/javascript_action_prototype.html',
    'html_templates/javascript_prototype.html',
    'html_templates/python_action_prototype.html',
    'html_templates/python_compound.html',
    'html_templates/python_compound_summary.html',
    'html_templates/python_prototype.html',
    'html_templates/symbol_language_wrapper.html',
    'languages/__init__.py',
    'languages/c.py',
    'languages/javascript.py',
    'languages/python.py',
    'transition_scripts/translate_sections.sh',
    subdir: 'hotdoc/extensions/gi',
    preserve_path: true,
)