py.install_sources(
    '__init__.py',
    'license_extension.py',
    'data/CC0-1.0.png',
    'data/CC0-1.0.txt',
    'data/CC-BY-SAv4.0.png',
    'data/CC-BY-SAv4.0.txt',
    'data/GPLv3.txt',
    'data/MIT.txt',
    'html_templates/copyrights.html',
    'html_templates/license.html',
    subdir: 'hotdoc/extensions/license',
    preserve_path: true,
)